--- a/charts/merlin/templates/mlflow-ingress.yaml
+++ b/charts/merlin/templates/mlflow-ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.mlflow.ingress.enabled }}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template "mlflow.fullname" .}}
@@ -12,8 +12,11 @@ spec:
       http:
         paths:
           - path: {{ .Values.mlflow.ingress.path | default "/" }}
+            pathType: Prefix
             backend:
-              serviceName: {{ template "mlflow.fullname" .}}
-              servicePort: {{ .Values.mlflow.service.externalPort }}
+              service:
+                name: {{ template "mlflow.fullname" .}}
+                port:
+                  number: {{ .Values.mlflow.service.externalPort }}
 {{- end }}
 
