--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -337,10 +337,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: merlin.${{ needs.create-version.outputs.version }}.tar
-      - name: Download Batch Predictor Docker Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
       - name: Download Pyfunc Server Docker Artifact
         uses: actions/download-artifact@v2
         with:
@@ -349,7 +345,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
-
       - name: Download k3d
         run: |
             curl --silent --fail https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.4.1 bash
@@ -374,11 +369,14 @@ jobs:
           docker tag merlin-transformer:${{ needs.create-version.outputs.version }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }}
           k3d image import ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }}/merlin-transformer:${{ needs.create-version.outputs.version }} -c merlin-cluster
       - name: Setup cluster
-        working-directory: merlin/scripts/e2e/
-        run: ./setup-cluster.sh merlin-cluster
+        working-directory: merlin/scripts/e2e
+        run: |
+          pwd
+          ls -lah
+          ./setup-cluster.sh merlin-cluster
       - name: Deploy merlin and mlp
-        working-directory: merlin/scripts/e2e/
+        working-directory: merlin/scripts/e2e
         run: ./deploy-merlin.sh ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ../../charts/merlin ${{ needs.create-version.outputs.version }}
       - name: Run E2E Test
-        working-directory: merlin/scripts/e2e/
+        working-directory: merlin/scripts/e2e
         run: ./run-e2e.sh
