--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -69,13 +69,8 @@ merlin:
     predictionJobContextSubPath: "python/batch-predictor"
     kanikoImage: "gcr.io/kaniko-project/executor:v1.6.0"
     retention: "48h"
-    tolerations:
-      - key: "image-build-job"
-        operator: "Equal"
-        value: "true"
-        effect: "NoSchedule"
-    nodeSelectors:
-      cloud.google.com/gke-nodepool: "image-building-job-node-pool"
+    tolerations: []
+    nodeSelectors: {}
     maxRetry: 3
 
   vault:
