Address PR Review: * Adding more tests * Adding more comments * Remove unnecessary commented code * Update documentation * Change behaviour of `SliceRow`

--- a/api/pkg/transformer/pipeline/testdata/valid_table_transform_conditional_filtering.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_table_transform_conditional_filtering.yaml
@@ -22,9 +22,9 @@ transformerConfig:
                 expression: customer_id
               - column: driver_performa
                 conditions:
-                  - if: driver_table.Col("rating") * 2 <= 7
+                  - rowSelector: driver_table.Col("rating") * 2 <= 7
                     expression: driver_table.Col("rating") * 1
-                  - if: driver_table.Col("rating") * 2 >= 8
+                  - rowSelector: driver_table.Col("rating") * 2 >= 8
                     expression: driver_table.Col("rating") * 1.5
                   - default:
                       expression: zero
