Disable scale down to zero for message-dumper

--- a/scripts/e2e/config/mock/message-dumper.yaml
+++ b/scripts/e2e/config/mock/message-dumper.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: message-dumper
   namespace: mlp
+  annotations:
+    autoscaling.knative.dev/min-scale: "1"
 spec:
   template:
     spec:
