--- a/scripts/e2e/config/mock/message-dumper.yaml
+++ b/scripts/e2e/config/mock/message-dumper.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: message-dumper
   namespace: mlp
-  annotations:
-    autoscaling.knative.dev/min-scale: "1"
 spec:
   template:
+    metadata:
+      annotations:
+        autoscaling.knative.dev/min-scale: "1"
     spec:
       containers:
       - image: gcr.io/knative-releases/knative.dev/eventing-contrib/cmd/event_display
