--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -26,7 +26,7 @@ jobs:
           VERSION=$(git describe --tags --always --first-parent)
 
           # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
+          [ "$VERSION" == "main" ] && VERSION=latest
 
           echo "::set-output name=version::${VERSION}"
 
