--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -63,9 +63,9 @@ merlin:
     predictionJobDockerfilePath: "docker/app.Dockerfile"
     contextSubPath: "python/pyfunc-server"
     predictionJobContextSubPath: "python/batch-predictor"
-    buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
-    predictionJobBuildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
-    predictionJobBaseImage: "gojek/mlp/merlin-pyspark:v0.4.1"
+    buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
+    predictionJobBuildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
+    predictionJobBaseImage: "ghcr.io/gojek/merlin-pyspark-base:v0.4.1"
     nodeSelectors: {}
     tolerations: []
 
