--- a/python/batch-predictor/Makefile
+++ b/python/batch-predictor/Makefile
@@ -2,11 +2,11 @@ export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
 .PHONY: setup
 setup:
-	@pipenv install --skip-lock --dev
+	@pipenv install --skip-lock -e .[test]
 
 .PHONY: type_check
 type_check:
-	@mypy --ignore-missing-imports --allow-untyped-globals  merlinpyspark
+	@pipenv run mypy --ignore-missing-imports --allow-untyped-globals  merlinpyspark
 
 .PHONY: test
 test: type_check
