Create tables from file & UI bugs fix (#234)
* create table with static data

* wire up preloaded tables

* load table from local and gcs, parquet or csv

* table create from file

* tests added

* ui

* fix ui bugs

* ui

* fix proto files

* fix test templater

* fix e2e

* fix e2e

* fix pr comments

* add help hint to ui

* change container name to kf-serving

* fix test

* e2e test

* fix typo

* fix logging of data file

* fix logging of data file

* fix artifact path

* fix artifact path

* fix artifact path

* fix artifact path

* fix artifact path

* fix artifact path

* remove local related test

* remove local related test

* added docs

* added default schema from parquet

* added default schema from parquet

--- a/api/pkg/transformer/pipeline/testdata/valid_input_only.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_input_only.yaml
@@ -38,6 +38,11 @@ transformerConfig:
               - name: column_2
                 fromJson:
                   jsonPath: $.entity_2
+          - name: preload_1
+            baseTable:
+              fromFile:
+                format: PARQUET
+                uri: ../types/table/testdata/normal.parquet
       - variables:
           - name: variable1
             jsonPath: $.entity_2.id
@@ -85,6 +90,11 @@ transformerConfig:
               - name: column_2
                 fromJson:
                   jsonPath: $.entity_2
+          - name: preload_2
+            baseTable:
+              fromFile:
+                format: CSV
+                uri: ../types/table/testdata/normal.csv
       - variables:
           - name: variable1
             jsonPath: $.entity_2.id
