--- a/api/pkg/transformer/pipeline/testdata/valid_simple_preprocess.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_simple_preprocess.yaml
@@ -7,6 +7,20 @@ transformerConfig:
               fromJson:
                 jsonPath: $.entities[*]
                 addRowNumber: false
+      - tables:
+          - name: filetable
+            baseTable:
+              fromFile:
+                uri: ../types/table/testdata/normal.parquet
+                format: PARQUET
+          - name: filetable2
+            baseTable:
+              fromFile:
+                uri: ../types/table/testdata/normal.csv
+                format: CSV
+                schema:
+                  - name: "Is VIP"
+                    type: BOOL
     outputs:
       - jsonOutput:
           jsonTemplate:
@@ -14,4 +28,12 @@ transformerConfig:
               - fieldName: instances
                 fromTable:
                   tableName: "entity_table"
+                  format: "SPLIT"
+              - fieldName: tablefile
+                fromTable:
+                  tableName: "filetable"
+                  format: "SPLIT"
+              - fieldName: tablefile2
+                fromTable:
+                  tableName: "filetable2"
                   format: "SPLIT"
