--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -24,7 +24,7 @@ jobs:
         name: Create version string
         run: |
           # This version will be used to identify intermediary artifact published to github
-          VERSION=$(git rev-parse --short=10 HEAD)
+          VERSION=$(git describe --tags --always --first-parent)
 
           echo "::set-output name=version::${VERSION}"
 
