--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -20,12 +20,14 @@ jobs:
       version: ${{ steps.create_version.outputs.version }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - id: create_version
         name: Create version string
         run: |
           # This version will be used to identify intermediary artifact published to github
           VERSION=$(git describe --tags --always --first-parent)
-
+        
           echo "::set-output name=version::${VERSION}"
 
   test-batch-predictor:
